# static/swagger.json
@@ -1001,6 +1001,7 @@
             ],
             "summary": "Get event with given ID",
             "description": "This endpoint will get event by given ID.\n\n__Usage__:\n\n1) Click on the **Try it out** button.\n\n2) Click on the **Execute** button to submit the request.\n\n**The below table defines the HTTP Status codes that this API may return**\n\n<table>\n  <tr>\n    <td>Status Code</td>\n    <td>Description</td>\n    <td>Reason</td>\n  </tr>\n  <tr>\n    <td>200</td>\n    <td>Event Data</td>\n    <td>Returns the event with given ID.</td>\n  </tr>\n  <tr>\n    <td>401</td>\n    <td>Unauthorized</td>\n    <td>If Missing Authorization Header.</td>\n  </tr>\n  <tr>\n    <td>500</td>\n    <td>Server Error</td>\n    <td>If Internal server error occured.</td>\n  </tr>\n</table>",
+            "security":[{"JWT": {} }],
             "securityDefinitions": {
               "bearerAuth": {
                 "type": "apiKey",
@@ -1178,6 +1179,7 @@
           ],
           "summary": "Upload an Image",
           "description": "This endpoint will upload a new image.\n\n__Usage__:\n\n1) Click on the **Try it out** button.\n\n2) Click on the **Execute** button to submit the request.\n\n3) The device_type must be one of **mobile, desktop**.\n\n**The below table defines the HTTP Status codes that this API may return**\n\n<table>\n  <tr>\n    <td>Status Code</td>\n    <td>Description</td>\n    <td>Reason</td>\n  </tr>\n  <tr>\n    <td>200</td>\n    <td>Event Image Uploaded</td>\n    <td>Returns the fileurl.</td>\n  </tr>\n  <tr>\n    <td>401</td>\n    <td>Unauthorized</td>\n    <td>If Missing Authorization Header.</td>\n  </tr>\n  <tr>\n    <td>413</td>\n    <td>Request Entity Too large</td>\n    <td>If request entity is too large</td>\n  </tr>\n  <tr>\n    <td>500</td>\n    <td>Server Error</td>\n    <td>If Internal server error occured.</td>\n  </tr>\n</table>",
+          "security":[{"JWT": {} }],
           "requestBody": {
             "content": {
               "multipart/form-data": {
@@ -1248,41 +1250,36 @@
           }
         }
       },
-      "/events/image/{id}/{filename}": {
-        "delete": {
-          "summary": "Delete Event Image",
-          "description": "This API Endpoint will delete event image.\n\n__Usage__:\n\n1) Click on the **Try it out** button.\n\n2) Click on the **Execute** button to submit the request.\n\n**The below table defines the HTTP Status codes that this API may return**\n\n<table>\n  <tr>\n    <td>Status Code</td>\n    <td>Description</td>\n    <td>Reason</td>\n  </tr>\n  <tr>\n    <td>200</td>\n    <td>Event Image Data</td>\n    <td>File abc.jpg deleted successfully.</td>\n  </tr>\n  <tr>\n    <td>401</td>\n    <td>Unauthorized</td>\n    <td>If Missing Authorization Header.</td>\n  </tr>\n  <tr>\n    <td>404</td>\n    <td>Not Found</td>\n    <td>File Not Found</td>\n  </tr>\n  <tr>\n    <td>500</td>\n    <td>Server Error</td>\n    <td>If Internal server error occured.</td>\n  </tr>\n</table>",       
+      "/delete_eventimage": {
+        "post": {
+          "summary": "Delete image file from DigitalOcean.",
+          "description": "This endpoint will delete an existing image.\n\n__Usage__:\n\n1) Click on the **Try it out** button.\n\n2) Click on the **Execute** button to submit the request.\n\n**The below table defines the HTTP Status codes that this API may return**\n\n<table>\n  <tr>\n    <td>Status Code</td>\n    <td>Description</td>\n    <td>Reason</td>\n  </tr>\n  <tr>\n    <td>200</td>\n    <td>Event Image Deleted</td>\n    <td>Deletes the file successfully.</td>\n  </tr>\n  <tr>\n    <td>401</td>\n    <td>Unauthorized</td>\n    <td>Invalid Object Key.</td>\n  </tr>\n  <tr>\n    <td>500</td>\n    <td>Server Error</td>\n    <td>If Internal server error occured.</td>\n  </tr>\n</table>",
           "security":[{"JWT": {} }],
           "tags": [
             "Event"
           ],
-          "parameters": [
-            {
-              "in": "path",
-              "name": "id",
-              "required": true,
-              "description": "Delete Event Image",
-              "schema": {
-                "$ref": "#/components/schemas/id"
+          "requestBody": {
+            "required": true,
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "object_key": {
+                      "type": "string"
+                    }
+                  }
+                }
               }
-            },
-            {
-              "in": "path",
-              "name": "filename",
-              "required": true,
-              "description": "Image Filename",
-              "schema": {
-                  "type": "string"
-              }
-          }
-          ],
+            }
+          },     
           "responses": {
             "200": {
               "description": "Event Image Data",
               "content": {
                 "application/json": {
                   "schema": {
-                    "$ref": "#/components/serverResponseExample/deleteEventImageByIdSuccess"
+                    "$ref": "#/components/serverResponseExample/deleteImageObjectByIdSuccess"
                   }
                 }
               }
@@ -1292,7 +1289,7 @@
               "content": {
                 "application/json": {
                   "schema": {
-                    "$ref": "#/components/serverResponseExample/unauthorizedIdError"
+                    "$ref": "#/components/serverResponseExample/unauthorizedKeyError"
                   }
                 }
               }
@@ -1302,7 +1299,7 @@
               "content": {
                 "application/json": {
                   "schema": {
-                    "$ref": "#/components/serverResponseExample/getEventByIdNotFoundError"
+                    "$ref": "#/components/serverResponseExample/getEventImageByIdNotFoundError"
                   }
                 }
               }
@@ -1716,6 +1713,11 @@
         "msg": "Invalid Object ID"
       }
     },
+    "unauthorizedKeyError": {
+      "example": {
+        "msg": "Invalid Object Key"
+      }
+    },
     "largerEntityError": {
       "example": {
         "msg": "Request Entity Too Large"
@@ -1926,6 +1928,11 @@
         "message": "Event not found" 
       }
     },
+    "getEventImageByIdNotFoundError": {
+      "example": {
+        "message": "File Not found" 
+      }
+    },
     "getNewsletterByIdNotFoundError": {
       "example": {
         "message": "Newsletter not found" 
@@ -1995,6 +2002,11 @@
     "deleteEventImageByIdSuccess": {
       "example": {
         "message": "File gradientrectangle.jpg deleted successfully"
+      }
+    },
+    "deleteImageObjectByIdSuccess": {
+      "example": {
+        "message": "File deleted successfully"
       }
     },
     "deleteNewsletterByIdSuccess": {
